CMAKE_MINIMUM_REQUIRED (VERSION 2.6.0)

PROJECT (shadowvpn)

OPTION (WITH_DEBUG "debugging support" OFF)

IF (WITH_DEBUG)
    SET(CMAKE_BUILD_TYPE "Debug")
    SET(CMAKE_C_FLAGS_DEBUG "-g -ggdb")
ENDIF ()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    SET(TARGET_LINUX ON)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SET(TARGET_DARWIN ON)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

IF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
    SET(TARGET_FREEBSD ON)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    SET(TARGET_WIN32 ON)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

INCLUDE_DIRECTORIES (
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${CMAKE_CURRENT_BINARY_DIR}
    )

ADD_DEFINITIONS(-DHAVE_CONFIG_H)

CONFIGURE_FILE (
    "${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.in"
    "${CMAKE_CURRENT_BINARY_DIR}/config.h"
    )

SET (HDR
        ${CMAKE_CURRENT_SOURCE_DIR}/src/shadowvpn.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/shell.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/args.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/vpn.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto_secretbox_salsa208poly1305.h
        ${CMAKE_CURRENT_SOURCE_DIR}/src/daemon.h
    )

SET (SRC_SHADOWVPN
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/args.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto_secretbox_salsa208poly1305.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/daemon.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/log.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/shell.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/vpn.c
    )

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}/modules")

ADD_EXECUTABLE (shadowvpn ${SRC_SHADOWVPN} ${HDR})
FIND_PACKAGE (LIBSODIUM  REQUIRED )
INCLUDE_DIRECTORIES (${LIBSODIUM_INCLUDE_DIR} )
TARGET_LINK_LIBRARIES (shadowvpn ${LIBSODIUM_LIBRARIES})

INSTALL(TARGETS shadowvpn DESTINATION bin)
